[gd_scene load_steps=6 format=3 uid="uid://bnhtlf3p84bb8"]

[ext_resource type="Script" path="res://scripts/pushable_box.gd" id="1_j7h5p"]
[ext_resource type="Texture2D" uid="uid://cyqjeuueovxx6" path="res://assets/world/interactables/box.png" id="2_tpt27"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ro2pl"]
size = Vector2(21, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjsk3"]
size = Vector2(2.75, 20)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_8e320"]
polygon = PackedVector2Array(-9.5, -9.5, 9.5, -9.5, 9.5, 9.5, -9.5, 9.5)

[node name="PushableBox" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_j7h5p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ro2pl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.38419e-07, 2.38419e-07)
scale = Vector2(0.65625, 0.65625)
texture = ExtResource("2_tpt27")

[node name="CollisionLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionLeft"]
position = Vector2(-10, 0)
shape = SubResource("RectangleShape2D_sjsk3")

[node name="CollisionTop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionTop"]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("RectangleShape2D_sjsk3")

[node name="CollisionBottom" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionBottom"]
position = Vector2(0, 10)
rotation = 1.5708
shape = SubResource("RectangleShape2D_sjsk3")

[node name="CollisionRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionRight"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_sjsk3")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_8e320")

[connection signal="body_entered" from="CollisionLeft" to="." method="_on_collision_left_body_entered"]
[connection signal="body_exited" from="CollisionLeft" to="." method="_on_collision_left_body_exited"]
[connection signal="body_entered" from="CollisionTop" to="." method="_on_collision_top_body_entered"]
[connection signal="body_exited" from="CollisionTop" to="." method="_on_collision_top_body_exited"]
[connection signal="body_entered" from="CollisionBottom" to="." method="_on_collision_bottom_body_entered"]
[connection signal="body_exited" from="CollisionBottom" to="." method="_on_collision_bottom_body_exited"]
[connection signal="body_entered" from="CollisionRight" to="." method="_on_collision_right_body_entered"]
[connection signal="body_exited" from="CollisionRight" to="." method="_on_collision_right_body_exited"]
